--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!-- Hayo Ngapain?:v -->
-<!-- Credit Template By Farhan -->
+<!-- Credit Template By Farhan > Recode By Rafasurya / Sayu-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
